SampleNginx/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-nginx-deployment
  namespace: test
  labels:
    app: example-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-nginx
  template:
    metadata:
      labels:
        app: example-nginx
    spec:
      containers:
      - name: example-nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "200m"
          limits:
            memory: "64Mi"
            cpu: "300m"
