SampleNginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-nginx-service
  namespace: test
spec:
  selector:
    app: example-nginx
  ports:
  - port: 80
    name: whatever
  type: ClusterIP
