SampleNginx/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-nginx-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2   
    nginx.ingress.kubernetes.io/use-regex: "true"  
    nginx.ingress.kubernetes.io/x-forwarded-prefix: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.jarbank.io
      http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: example-nginx-service
                port:
                  number: 80
